--- a/rahGraphics/rahGraphics.vcxproj
+++ b/rahGraphics/rahGraphics.vcxproj
@@ -171,6 +171,7 @@
   <ItemGroup>
     <ClInclude Include="Buffer.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="CameraDebug.h" />
     <ClInclude Include="ConstantBuffer.h" />
     <ClInclude Include="FragmentShader.h" />
     <ClInclude Include="GraphicDepthStencilView.h" />
@@ -197,6 +198,7 @@
   <ItemGroup>
     <ClCompile Include="Buffer.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="CameraDebug.cpp" />
     <ClCompile Include="ConstantBuffer.cpp" />
     <ClCompile Include="FragmentShader.cpp" />
     <ClCompile Include="GraphicDepthStencilView.cpp" />
