+ new class for collisions betw geometry

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ lib/rahMath/x64/Release/rahMath_Release.lib
 lib/rahEngine/x64/Release/rahEngine_Release.lib
 lib/rahEngine/x64/Debug/rahEngine_Debug.lib
 rahGRaphics_Test/Log/
+/rahMathCollisions_Test/rahMathCollisions_Test.vcxproj.user
