+render manager +shape render

--- a/rahGraphics/rahGraphics.vcxproj.filters
+++ b/rahGraphics/rahGraphics.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="CameraDebug.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="RenderManager.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GraphicSwapChain.cpp">
@@ -162,6 +165,9 @@
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
     <ClCompile Include="CameraDebug.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
+    <ClCompile Include="RenderManager.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
   </ItemGroup>
