--- a/rahGRaphics_Test/rahGRaphics_Test.vcxproj.filters
+++ b/rahGRaphics_Test/rahGRaphics_Test.vcxproj.filters
@@ -59,5 +59,8 @@
     <FxCompile Include="shaders.fx">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="shapes.fx">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
