--- a/rahEngine/rahEngine.vcxproj
+++ b/rahEngine/rahEngine.vcxproj
@@ -19,10 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Actor.h" />
     <ClInclude Include="rahEngine.h" />
     <ClInclude Include="ResourceFabric.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Actor.cpp" />
     <ClCompile Include="ResourceFabric.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
