+Actor dynamicActor and transform *math project and engine

--- a/rahEngine/rahEngine.vcxproj
+++ b/rahEngine/rahEngine.vcxproj
@@ -19,10 +19,15 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Actor.h" />
+    <ClInclude Include="DynamicActor.h" />
+    <ClInclude Include="rahAll.h" />
     <ClInclude Include="rahEngine.h" />
     <ClInclude Include="ResourceFabric.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Actor.cpp" />
+    <ClCompile Include="DynamicActor.cpp" />
     <ClCompile Include="ResourceFabric.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
