--- a/rahEngine/rahEngine.vcxproj.filters
+++ b/rahEngine/rahEngine.vcxproj.filters
@@ -21,9 +21,24 @@
     <ClInclude Include="ResourceFabric.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Actor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rahAll.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DynamicActor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ResourceFabric.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Actor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DynamicActor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
