--- a/rahEngine/rahEngine.vcxproj
+++ b/rahEngine/rahEngine.vcxproj
@@ -20,14 +20,18 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
+    <ClInclude Include="Controller.h" />
     <ClInclude Include="DynamicActor.h" />
+    <ClInclude Include="PlayerActor.h" />
     <ClInclude Include="rahAll.h" />
     <ClInclude Include="rahEngine.h" />
     <ClInclude Include="ResourceFabric.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
+    <ClCompile Include="Controller.cpp" />
     <ClCompile Include="DynamicActor.cpp" />
+    <ClCompile Include="PlayerActor.cpp" />
     <ClCompile Include="ResourceFabric.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
