--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,10 @@ lib/rahEngine/x64/Debug/rahEngine_Debug.lib
 rahGRaphics_Test/Log/
 /rahMathCollisions_Test/rahMathCollisions_Test.vcxproj.user
 rahGRaphics_Test/shapes.fx
+lib/rahAudio/Win32/Debug/rahAudio_Debug.lib
+rahAudio/rahAudio.vcxproj.filters
+rahAudio/rahAudio.vcxproj.user
+rahAudio_Test/rahAudio_Test.vcxproj.filters
+rahAudio_Test/rahAudio_Test.vcxproj.user
+rahAudio_Test/Log/May  1 2019.txt
+rahAudio_Test/Audio/Cartoons - Witch Doctor (128  kbps).mp3
